--- a/README
+++ b/README
@@ -22,9 +22,9 @@ Installation
 ================================================================================
 See INSTALL for installation instructions
 
-Licence
+License
 ================================================================================
-GPL3, see https://www.gnu.org/licenses/gpl-3.0.en.html
+GPL-3.0, see https://www.gnu.org/licenses/gpl-3.0.en.html.
 
 Author
 ================================================================================
