--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Codefox guess\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-23 05:33+0800\n"
+"POT-Creation-Date: 2017-09-23 06:16+0800\n"
 "PO-Revision-Date: 2013-10-02 23:12+0800\n"
 "Last-Translator: Gordon Lee <nirvanan@live.cn>\n"
 "Language-Team: Gordon Lee <nirvanan@live.cn>\n"
@@ -164,7 +164,7 @@ msgid "Create a new project"
 msgstr "创建新工程"
 
 #: ../template/codefox.ui.in.h:37
-msgid "Open a exist project"
+msgid "Open an existing project"
 msgstr "打开存在的工程"
 
 #: ../template/codefox.ui.in.h:38
